--- a/1-1.html
+++ b/1-1.html
@@ -6,18 +6,14 @@
 
 
 <body>
-<h1>  네트워크팀 교육 </h1>
-
-<strong>네트워크팀 교육관리 </strong>웹페이지 입니다.<p <style="margin-top=45px">
-
-</style>관리를 쉽게 하게 위해 만들었습니다.
-이웹페이를 통해 <u>교육을 관리하고 <strong>발전</strong>하는 통로</u>가 되었으면 좋겠습니다.</p>
+  <h1><u>교육관리</u></h1>
+  <h2><strong>해당 교육을 클릭하세요</strong></h2>
 <ol>
   <li> <a href="1-1.html">안전,소방,보건,보안</a></li>
   <li> <a href="1-2.html">외부교육</a></li>
   <li> <a href="1-3.html">내부교육</a></li>
   <li> <a href="1-4.html">금요강좌</a></li>
 </ol>
-<img src="coding.jpg" width="100%">
+<img src="coding.jpg" width="30%">
 <h2>안전,소방,보건,보안</h2>
 </body>
